[gd_scene load_steps=5 format=3 uid="uid://by8m2lmmr75je"]

[ext_resource type="Script" path="res://scripts/jefferson.gd" id="1_1fvkc"]
[ext_resource type="Texture2D" uid="uid://diujqg6ihfdmu" path="res://art/sprites/Jefferson/jefferson_00.png" id="2_rf0cp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yuy2f"]
size = Vector2(298.667, 105)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jpilv"]
size = Vector2(676.667, 843.333)

[node name="CharacterBody2D" type="StaticBody2D"]
scale = Vector2(0.3, 0.3)
script = ExtResource("1_1fvkc")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_rf0cp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(3.33333, 236.667)
shape = SubResource("RectangleShape2D_yuy2f")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(51.6667, 38.3333)
shape = SubResource("RectangleShape2D_jpilv")
debug_color = Color(0.994931, 0.630673, 1, 0.42)

[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
